samples/piazza11.out

*** Error line 2.
  int a[2+3];	// bad array decl
       ^
*** syntax error

